tests/fat/snapshots/fat__test_patching__rpath_remove.snap
---
source: tests/fat/test_patching.rs
expression: changed_macho
---
MachO {
    header: Header {
        magic: 0xfeedface,
        cputype: 7,
        cpusubtype: 0x3,
        filetype: "EXECUTE",
        ncmds: 17,
        sizeofcmds: 1088,
        flags: 0x1200085,
        reserved: 0x0,
    },
    load_commands: [
        LoadCommand {
            offset: 28,
            command: Segment32(
                SegmentCommand32 {
                    cmd: 1,
                    cmdsize: 56,
                    segname: [
                        95,
                        95,
                        80,
                        65,
                        71,
                        69,
                        90,
                        69,
                        82,
                        79,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 0,
                    vmsize: 4096,
                    fileoff: 0,
                    filesize: 0,
                    maxprot: 0,
                    initprot: 0,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 84,
            command: Segment32(
                SegmentCommand32 {
                    cmd: 1,
                    cmdsize: 396,
                    segname: [
                        95,
                        95,
                        84,
                        69,
                        88,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 4096,
                    vmsize: 4096,
                    fileoff: 0,
                    filesize: 4096,
                    maxprot: 7,
                    initprot: 5,
                    nsects: 5,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 480,
            command: Segment32(
                SegmentCommand32 {
                    cmd: 1,
                    cmdsize: 192,
                    segname: [
                        95,
                        95,
                        68,
                        65,
                        84,
                        65,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 8192,
                    vmsize: 4096,
                    fileoff: 4096,
                    filesize: 4096,
                    maxprot: 7,
                    initprot: 3,
                    nsects: 2,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 672,
            command: Segment32(
                SegmentCommand32 {
                    cmd: 1,
                    cmdsize: 56,
                    segname: [
                        95,
                        95,
                        76,
                        73,
                        78,
                        75,
                        69,
                        68,
                        73,
                        84,
                        0,
                        0,
                        0,
                        0,
                        0,
                        0,
                    ],
                    vmaddr: 12288,
                    vmsize: 32768,
                    fileoff: 8192,
                    filesize: 18864,
                    maxprot: 7,
                    initprot: 1,
                    nsects: 0,
                    flags: 0,
                },
            ),
        },
        LoadCommand {
            offset: 728,
            command: DyldInfoOnly(
                DyldInfoCommand {
                    cmd: 2147483682,
                    cmdsize: 48,
                    rebase_off: 8192,
                    rebase_size: 16,
                    bind_off: 8208,
                    bind_size: 24,
                    weak_bind_off: 0,
                    weak_bind_size: 0,
                    lazy_bind_off: 8232,
                    lazy_bind_size: 16,
                    export_off: 8248,
                    export_size: 44,
                },
            ),
        },
        LoadCommand {
            offset: 776,
            command: Symtab(
                SymtabCommand {
                    cmd: 2,
                    cmdsize: 24,
                    symoff: 8296,
                    nsyms: 4,
                    stroff: 8360,
                    strsize: 56,
                },
            ),
        },
        LoadCommand {
            offset: 800,
            command: Dysymtab(
                DysymtabCommand {
                    cmd: 11,
                    cmdsize: 80,
                    ilocalsym: 0,
                    nlocalsym: 0,
                    iextdefsym: 0,
                    nextdefsym: 2,
                    iundefsym: 2,
                    nundefsym: 2,
                    tocoff: 0,
                    ntoc: 0,
                    modtaboff: 0,
                    nmodtab: 0,
                    extrefsymoff: 0,
                    nextrefsyms: 0,
                    indirectsymoff: 8344,
                    nindirectsyms: 4,
                    extreloff: 0,
                    nextrel: 0,
                    locreloff: 0,
                    nlocrel: 0,
                },
            ),
        },
        LoadCommand {
            offset: 880,
            command: LoadDylinker(
                DylinkerCommand {
                    cmd: 14,
                    cmdsize: 28,
                    name: 12,
                },
            ),
        },
        LoadCommand {
            offset: 908,
            command: Uuid(
                UuidCommand {
                    cmd: 27,
                    cmdsize: 24,
                    uuid: [
                        201,
                        149,
                        203,
                        167,
                        55,
                        135,
                        53,
                        19,
                        187,
                        35,
                        96,
                        89,
                        116,
                        221,
                        54,
                        9,
                    ],
                },
            ),
        },
        LoadCommand {
            offset: 932,
            command: VersionMinMacosx(
                VersionMinCommand {
                    cmd: 36,
                    cmdsize: 16,
                    version: 658176,
                    sdk: 658176,
                },
            ),
        },
        LoadCommand {
            offset: 948,
            command: SourceVersion(
                SourceVersionCommand {
                    cmd: 42,
                    cmdsize: 16,
                    version: 0,
                },
            ),
        },
        LoadCommand {
            offset: 964,
            command: Main(
                EntryPointCommand {
                    cmd: 2147483688,
                    cmdsize: 24,
                    entryoff: 3920,
                    stacksize: 0,
                },
            ),
        },
        LoadCommand {
            offset: 988,
            command: LoadDylib(
                DylibCommand {
                    cmd: 12,
                    cmdsize: 52,
                    dylib: Dylib {
                        name: 24,
                        timestamp: 2,
                        current_version: 80281857,
                        compatibility_version: 65536,
                    },
                },
            ),
        },
        LoadCommand {
            offset: 1040,
            command: Rpath(
                RpathCommand {
                    cmd: 2147483676,
                    cmdsize: 28,
                    path: 12,
                },
            ),
        },
        LoadCommand {
            offset: 1068,
            command: FunctionStarts(
                LinkeditDataCommand {
                    cmd: 38,
                    cmdsize: 16,
                    dataoff: 8292,
                    datasize: 4,
                },
            ),
        },
        LoadCommand {
            offset: 1084,
            command: DataInCode(
                LinkeditDataCommand {
                    cmd: 41,
                    cmdsize: 16,
                    dataoff: 8296,
                    datasize: 0,
                },
            ),
        },
        LoadCommand {
            offset: 1100,
            command: CodeSignature(
                LinkeditDataCommand {
                    cmd: 29,
                    cmdsize: 16,
                    dataoff: 8416,
                    datasize: 18640,
                },
            ),
        },
    ],
    segments: Segments {
        segments: [
            Segment {
                cmd: 1,
                cmdsize: 56,
                segname: "__PAGEZERO",
                vmaddr: 0,
                vmsize: 4096,
                fileoff: 0,
                filesize: 0,
                maxprot: 0,
                initprot: 0,
                nsects: 0,
                flags: 0,
                data: 0,
                sections(): Ok(
                    [],
                ),
            },
            Segment {
                cmd: 1,
                cmdsize: 396,
                segname: "__TEXT",
                vmaddr: 4096,
                vmsize: 4096,
                fileoff: 0,
                filesize: 4096,
                maxprot: 7,
                initprot: 5,
                nsects: 5,
                flags: 0,
                data: 4096,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__text",
                            segname: "__TEXT",
                            addr: 8016,
                            size: 50,
                            offset: 3920,
                            align: 4,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484672,
                        },
                        Section {
                            sectname: "__symbol_stub",
                            segname: "__TEXT",
                            addr: 8066,
                            size: 6,
                            offset: 3970,
                            align: 1,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484936,
                        },
                        Section {
                            sectname: "__stub_helper",
                            segname: "__TEXT",
                            addr: 8072,
                            size: 22,
                            offset: 3976,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2147484928,
                        },
                        Section {
                            sectname: "__cstring",
                            segname: "__TEXT",
                            addr: 8094,
                            size: 15,
                            offset: 3998,
                            align: 0,
                            reloff: 0,
                            nreloc: 0,
                            flags: 2,
                        },
                        Section {
                            sectname: "__unwind_info",
                            segname: "__TEXT",
                            addr: 8112,
                            size: 72,
                            offset: 4016,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 0,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 1,
                cmdsize: 192,
                segname: "__DATA",
                vmaddr: 8192,
                vmsize: 4096,
                fileoff: 4096,
                filesize: 4096,
                maxprot: 7,
                initprot: 3,
                nsects: 2,
                flags: 0,
                data: 4096,
                sections(): Ok(
                    [
                        Section {
                            sectname: "__nl_symbol_ptr",
                            segname: "__DATA",
                            addr: 8192,
                            size: 8,
                            offset: 4096,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 6,
                        },
                        Section {
                            sectname: "__la_symbol_ptr",
                            segname: "__DATA",
                            addr: 8200,
                            size: 4,
                            offset: 4104,
                            align: 2,
                            reloff: 0,
                            nreloc: 0,
                            flags: 7,
                        },
                    ],
                ),
            },
            Segment {
                cmd: 1,
                cmdsize: 56,
                segname: "__LINKEDIT",
                vmaddr: 12288,
                vmsize: 32768,
                fileoff: 8192,
                filesize: 18864,
                maxprot: 7,
                initprot: 1,
                nsects: 0,
                flags: 0,
                data: 18864,
                sections(): Ok(
                    [],
                ),
            },
        ],
    },
    entry: 8016,
    old_style_entry: false,
    libs: [
        "self",
        "/usr/lib/libSystem.B.dylib",
    ],
    name: None,
    little_endian: true,
    is_64: false,
    symbols(): [
        Ok(
            (
                "__mh_execute_header",
                Nlist {
                    n_strx: 2,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 16,
                    n_value: 4096,
                },
            ),
        ),
        Ok(
            (
                "_main",
                Nlist {
                    n_strx: 22,
                    n_type: 15,
                    n_sect: 1,
                    n_desc: 0,
                    n_value: 8016,
                },
            ),
        ),
        Ok(
            (
                "_printf",
                Nlist {
                    n_strx: 28,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
        Ok(
            (
                "dyld_stub_binder",
                Nlist {
                    n_strx: 36,
                    n_type: 1,
                    n_sect: 0,
                    n_desc: 256,
                    n_value: 0,
                },
            ),
        ),
    ],
    exports(): Ok(
        [
            Export {
                name: "__mh_execute_header",
                info: Regular {
                    address: 0,
                    flags: 0,
                },
                size: 0,
                offset: 0,
            },
            Export {
                name: "_main",
                info: Regular {
                    address: 3920,
                    flags: 0,
                },
                size: 0,
                offset: 3920,
            },
        ],
    ),
    imports(): Ok(
        [
            Import {
                name: "dyld_stub_binder",
                dylib: "/usr/lib/libSystem.B.dylib",
                is_lazy: false,
                offset: 4096,
                size: 0,
                address: 8192,
                addend: 0,
                is_weak: false,
                start_of_sequence_offset: 0,
            },
            Import {
                name: "_printf",
                dylib: "/usr/lib/libSystem.B.dylib",
                is_lazy: true,
                offset: 4104,
                size: 8,
                address: 8200,
                addend: 0,
                is_weak: false,
                start_of_sequence_offset: 0,
            },
        ],
    ),
}
